styles/tabs-nav.css
/* ... */
.recipe-grid div {
  display: flex;
  flex-wrap: wrap;
  border: 1px solid var(--clr-grey-9);
  border-radius: var(--radius);
  padding: 1rem;
  text-align: justify;
  /* background: url(../images/chopping-board.jpg) center no-repeat;
  background-size: contain; */
}

.recipe-grid .link:hover {
  border: 1px solid var(--clr-yellow-golden-pale);
  box-shadow: 0px 0px 5px 1px var(--clr-yellow-golden);
}

.recipe-grid img {
  display: flex;
  flex-direction: column;
  width: 75%;
  margin: 0 auto;
  border-radius: 50%;
  height: 200px;
  width: 200px;
  object-fit: cover;
  border: 2px solid var(--clr-grey-8);
  box-shadow: 0px 2px 4px 1px var(--clr-grey-1);
  background-color: var(--clr-black);
}

.recipe-grid a {
  margin: 0 auto;
}
.recipe-grid figcaption {
  color: var(--clr-grey-4);
  margin: 1rem auto 0;
  text-transform: capitalize;
}

/* 
      ==============
      ** Sausages **
      ==============
*/
/* ROW 1 */
.item-a {
  grid-column: 1 / 2;
  grid-row: 1 / 2;
}
.item-b {
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.item-c {
  grid-column: 3 / 4;
  grid-row: 1 / 2;
}

/* ROW 2 */
.item-d {
  grid-column: 2 / 3;
  grid-row: 2 / 3;
}
.item-e {
  grid-column: 3 / 4;
  grid-row: 2 / 3;
}

/* 
      =============
      ** Chicken **
      =============
*/
/* ROW 3 */
.item-f {
  grid-column: 1 / 2;
  grid-row: 3 / 4;
}
.item-g {
  grid-column: 2 / 3;
  grid-row: 3 / 4;
}
.item-h {
  grid-column: 3 / 4;
  grid-row: 3 / 4;
}

/* ROW 4 */
.item-i {
  grid-column: 1 / 2;
  grid-row: 4 / 5;
}
.item-j {
  grid-column: 2 / 3;
  grid-row: 4 / 5;
}
.item-k {
  grid-column: 3 / 4;
  grid-row: 4 / 5;
}

/* 
      ==========
      ** Beef **
      ==========
*/
.item-l {
  grid-column: 1 / 2;
  grid-row: 5 / 6;
}
.item-m {
  grid-column: 3 / 4;
  grid-row: 5 / 6;
}

/* 
      ==========
      ** Pork **
      ==========
*/

.item-n {
  grid-column: 1 / 2;
  grid-row: 6 / 7;
}
.item-o {
  grid-column: 3 / 4;
  grid-row: 6 / 7;
}

/* 
      =================
      ** Vege' Bakes **
      =================
*/
.item-p {
  grid-column: 1 / 2;
  grid-row: 7 / 8;
}
.item-q {
  grid-column: 2 / 3;
  grid-row: 7 / 8;
}
.item-r {
  grid-column: 3 / 4;
  grid-row: 7 / 8;
}

/* 
      ==================
      ** Cheese Sauce **
      ==================
*/
.item-s {
  grid-column: 1 / 2;
  grid-row: 8 / 9;
}
.item-t {
  grid-column: 2 / 3;
  grid-row: 8 / 9;
}
.item-u {
  grid-column: 3 / 4;
  grid-row: 8 / 9;
}

/* 
      ==============
      ** Puddings **
      ==============
  */
.item-v {
  grid-column: 1 / 2;
  grid-row: 9 / 10;
}
.item-w {
  grid-column: 2 / 3;
  grid-row: 9 / 10;
}
.item-x {
  grid-column: 3 / 4;
  grid-row: 9 / 10;
}

@media screen and (max-width: 650px) {
  .recipe-grid {
    grid-template-columns: 1fr;
    max-width: 85vw;
    gap: 1rem;
  }
  /* 
      ==============
      ** Sausages **
      ==============
  */
  .item-a {
    grid-column: 1 / 2;
    grid-row: 1 / 2;
  }
  .item-b {
    grid-column: 1 / 2;
    grid-row: 2 / 3;
  }
  .item-c {
    grid-column: 1 / 2;
    grid-row: 3 / 4;
  }
  .item-d {
    grid-column: 1 / 2;
    grid-row: 4 / 5;
  }
  .item-e {
    grid-column: 1 / 2;
    grid-row: 6 / 7;
  }

  /* 
      =============
      ** Chicken **
      =============
  */
  .item-f {
    grid-column: 1 / 2;
    grid-row: 7 / 8;
  }
  .item-g {
    grid-column: 1 / 2;
    grid-row: 8 / 9;
  }
  .item-h {
    grid-column: 1 / 2;
    grid-row: 9 / 10;
  }
  .item-i {
    grid-column: 1 / 2;
    grid-row: 10 / 11;
  }
  .item-j {
    grid-column: 1 / 2;
    grid-row: 11 / 12;
  }
  .item-k {
    grid-column: 1 / 2;
    grid-row: 12 / 13;
  }

  /* 
      ==================
      ** Beef **
      ==================
  */
  .item-l {
    grid-column: 1 / 2;
    grid-row: 13 / 14;
  }
  .item-m {
    grid-column: 1 / 2;
    grid-row: 14 / 15;
  }

  /* 
      ==================
      ** Pork **
      ==================
  */
  .item-n {
    grid-column: 1 / 2;
    grid-row: 15 / 16;
  }
  .item-o {
    grid-column: 1 / 2;
    grid-row: 16 / 17;
  }

  /* 
      ================
      ** Vege Bakes **
      ================
  */
  .item-p {
    grid-column: 1 / 2;
    grid-row: 17 / 18;
  }
  .item-q {
    grid-column: 1 / 2;
    grid-row: 18 / 19;
  }
  .item-r {
    grid-column: 1 / 2;
    grid-row: 19 / 20;
  }

  /* 
      ==================
      ** Cheese Sauce **
      ==================
  */
  .item-s {
    grid-column: 1 / 2;
    grid-row: 20 / 21;
  }
  .item-t {
    grid-column: 1 / 2;
    grid-row: 21 / 22;
  }
  .item-u {
    grid-column: 1 / 2;
    grid-row: 22 / 23;
  }

  /* 
      ==============
      ** Puddings **
      ==============
  */
  .item-v {
    grid-column: 1 / 2;
    grid-row: 23 / 24;
  }
  .item-w {
    grid-column: 1 / 2;
    grid-row: 24 / 25;
  }
  .item-x {
    grid-column: 1 / 2;
    grid-row: 25 / 26;
  }
}

/* =====================
   ** RECIPE GRID END **
   =====================
*/

